fix-contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -20,6 +20,7 @@ header{
 #mode{
   font-size: 2rem;
   text-decoration: none;
+  background-color: skyblue;
 }  
 
 img{
